# Screen-Sync

./: .env.example  .gitignore  .mcp.json  README.md  dappUI  next.config.js  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
app/api/pin-json/: route.ts
app/dashboard/: page.tsx
app/list/: page.tsx
app/marketplace/: page.tsx
components/: Button.tsx  Card.tsx  FilterBar.tsx  Footer.tsx  KickerLabel.tsx  ListingCard.tsx  ListingGrid.tsx  Navbar.tsx  ParticleCanvas.tsx  StatBox.tsx  TypeBadge.tsx  WalletButton.tsx  WalletProviderWrapper.tsx
components/contract/: AvailabilityCalendar.tsx  ContractBuilder.tsx
docs/: BACKEND-SETUP.md  NEXT-SESSION.md  SECURITY.md  SMART-CONTRACTS.md
lib/: availability.ts  bookings.ts  config.ts  connection.ts  constants.ts  explorer.ts  fileValidation.ts  format.ts  listings.ts  mockData.ts  pinata.ts  pricing.ts  solana.ts  transactions.ts
program/: .gitignore  Anchor.toml  README.md  package.json
program/programs/screen_sync_marketplace/: Cargo.toml
program/programs/screen_sync_marketplace/src/: lib.rs
program/tests/: screen_sync_marketplace.ts
styles/: Button.module.css  Card.module.css  ContractBuilder.module.css  CreateListing.module.css  Dashboard.module.css  FilterBar.module.css  Footer.module.css  Home.module.css  KickerLabel.module.css  ListingCard.module.css  ListingDetail.module.css  ListingGrid.module.css  Marketplace.module.css  Navbar.module.css  ParticleCanvas.module.css  StatBox.module.css  TypeBadge.module.css  WalletButton.module.css
(+13 files in other folders)
