[package]
name = "screen_sync_marketplace"
version = "0.1.0"
description = "Screen Sync — on-chain advertising marketplace (escrow + fees)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "screen_sync_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# Required for DayLedger init_if_needed (first booking on a date creates the ledger).
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
